--- a/character.css
+++ b/character.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    scroll-snap: y proximity;
 }
 
 body {
@@ -54,6 +55,7 @@ header ul li a.active {
     align-items: center;
     height: 100vh;
     width: 100vw;
+    scroll-snap-align: center;
 }
 
 .card {
